atualização de cores do site

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
         .container { max-width: 600px; margin: auto; }
         .horario { margin: 10px 0; padding: 10px; border: 1px solid #000; cursor: pointer; }
-        .disponivel { background-color: #4CAF50; color: white; }
-        .indisponivel { background-color: #ccc; }
+        .disponivel { background-color: #385139; color: white; }
+        .indisponivel { background-color: #c11919; }
     </style>
 </head>
 <body>
